<resources>
    <string name="app_name">Let2Wish</string>
    <string name="title_home">HOME</string>
    <string name="title_welfare">WELFARE</string>
    <string name="title_notifications">NOTIFICATION</string>
    <string name="title_profile">MINE</string>

    <string name="nick_name">NickName</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_forgot_password">Forgot your password? Click here!</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>

    <string name="btn_link_to_register">Not a member? Click here to sign up!</string>
    <string name="btn_link_to_login">Already have an account? Click here to login!</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_register">Register</string>

    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="my_goods">My Goods</string>
    <string name="my_contributions">My Contributions</string>
    <string name="language">Language</string>
    <string name="send">Send</string>

    <string name="please_input_email"> please input your email</string>
    <string name="please_input_pwd">please input password</string>
    <string name="invalid_email"> invalid email,please check</string>

    <string name="bga_pp_view_photo">Check Photo</string>
    <string name="bga_pp_save_img_success_folder">Picture Save to %s </string>

    <string name="publish_now">publish now...</string>
    <string name="upload_avatar_now">uploading now...</string>
    <string name="label_select_picture">select picture</string>
    <string name="waiting_now">waiting...</string>

    <string name="all_comments">All Comments</string>
    <string name="fab_add_goods">publish goods</string>
    <string name="fab_auction">auction</string>

    <string name="welfare_destination">Destination: %1$s</string>

    <string name="welfare_current">Current: %1$s</string>
    <string name="question_logout">do you want to logout?</string>
    <string name="prompt">Prompt</string>
    <string name="please_input_title">please input the title</string>
    <string name="please_input_content">please input the content</string>
    <string name="please_choose_picture">please choose a picture at least</string>
    <string name="please_input_price">please input the price</string>
    <string name="please_add_tag">please add some tags</string>
    <string name="please_set_due_date">please set date of due time</string>
    <string name="please_set_due_time">please set time of due time</string>
    <string name="post_at">Posted at </string>
    <string name="contribution">contribution:</string>
    <string name="please_choose_gender">please choose your gender</string>
    <string name="reset_pwd_success_tips">We have sent you instructions to reset your password!</string>
    <string name="reset_pwd_failed_tips">Failed to send reset email!</string>
    <string name="please_input_name">please input your nick name</string>
    <string name="already_donate">YOU HAVE ALREADY DONATED</string>
    <string name="comment">Comment</string>
    <string name="want">I WANT</string>
    <string name="auction">Auction</string>

    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_my_contribute">My Contributions</string>
    <string name="label_welfare">welfare</string>
    <string name="label_goods_auction">Goods Auction</string>
    <string name="label_my_goods">My Goods</string>
    <string name="label_goods_detail">Goods Detail</string>
    <string name="save_successfully_on_phone">Save in Album Successfully</string>

    <string name="menu_use">USE</string>
    <string name="menu_save">SAVE</string>
    <string name="menu_publish">PUBLISH</string>

    <string name="no_notification_tips">no message data</string>
    <string name="ask_for_delete_goods">do you confirm to delete this item?</string>

    <string name="profile">profile</string>
    <string name="profile_hint">please input your profile</string>

    <string name="signature">signature</string>
    <string name="signature_hint">please input your signature</string>

    <string name="address">address</string>
    <string name="address_hint">please input your address</string>

    <string name="hobby">hobby</string>
    <string name="hobby_hint">please input your hobbies</string>
</resources>